--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -291,6 +291,18 @@
     }
   }
 
+  .bg-overlay-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--racing-red);
+    opacity: 0.9;
+    z-index: 1;
+  }
+
 }
 
 
