--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,7 +180,7 @@
   }
 
   .section-padding {
-    @apply px-4 py-16 md:px-8 md:py-24 lg:px-12;
+    @apply py-20 md:px-8 md:py-24 lg:px-12;
   }
 
   .card-hover {
